# INSPECTA-Open-Platform

./: .gitignore  .gitmodules  README.md
ardupilot-basic/: GumboLib.sysml  Platform.sysml  SW.sysml
ardupilot-basic/aadl/: .project  .system  CASE_Properties.aadl  SW.aadl  platform.aadl
ardupilot-basic/aadl/.aadlbin-gen/: .CASE_Modeling_Guidelines.aadlbin  .CASE_Properties.aadlbin  .SW.aadlbin  .platform.aadlbin
ardupilot-basic/aadl/assurance/: .project  run_rodeo.sh
ardupilot-basic/aadl/diagrams/: SW_seL4_Impl.aadl_diagram  platform_ZCU102.aadl_diagram  platform_ZCU102_Impl(2).aadl_diagram  platform_ZCU102_Impl.aadl_diagram
ardupilot-basic/assurance/: .gitignore  ardupilot_assurance.aadl
ardupilot-basic/doc/: 00-overview.md  01-ethernet-frame-formats.md  02-mavlink-message-format.md  03-sysmlv2-model-and-gumbo-contracts.md  04-rx-firewall.md  05-tx-firewall.md  06-mavlink-firewall.md  SUMMARY.md
ardupilot-basic/hamr/: microkit_architecture.md  microkit_initial_to_final.md  refactorings.md
ardupilot-basic/hamr/microkit/: custom.mk  microkit.dot  (+3 more)
ardupilot-basic/hamr/microkit/crates/data/: Cargo.toml
ardupilot-basic/hamr/microkit/crates/data/src/: lib.rs
ardupilot-basic/hamr/microkit/crates/data/src/SW/: EthIpUdpHeaders.rs  RawEthernetMessage.rs  SizedEthernetMessage_Impl.rs  UdpFrame_Impl.rs  UdpPayload.rs  mod.rs  u16Array.rs
ardupilot-basic/hamr/microkit/crates/mavlink_parser_vest/: Cargo.toml
ardupilot-basic/hamr/microkit/crates/mavlink_parser_vest/src/: lib.rs  mavlink.rs  mavlink.vest
ardupilot-basic/sysml/: Platform.sysml  SW.sysml
(+227 files in other folders)
