[package]
name = "mavlink_parser_vest"
version = "0.1.0"
edition = "2024"

[dependencies]
vstd = { version = "=0.0.0-2026-01-11-0057", default-features=false }
verus_builtin = { version = "=0.0.0-2026-01-11-0057" }
verus_builtin_macros = { version = "=0.0.0-2025-12-07-0054" }
vest_lib = { git = "https://github.com/dornerworks/vest", rev = "open-platform-v2.0", default-features=false }

[package.metadata.verus]
verify = true
